Sat Mar 06, 2004 Scott Klement <klemscot@klements.com>
	* Upgraded to use GTK+-2.0, Glib-2.0, etc
	* Note that at the moment, gnome-5250 is not being built, IMHO,
	   it's redundant, anyway.  If someone needs it, please let me know.
 	* Disable F10 accelerator from menu so that it can be used normally
	   in the terminal.
	* Apply the keyboard modifiers mask to key mapping as recommended
	   in the GTK+ 1.2 -> 2.0 migration guide

Mon Aug 25, 2003 Scott Klement <klemscot@klements.com>
	* Added mapping of Ctrl-T to the 5250 K_TESTREQ function 

Thu Feb 13, 2003 Scott Klement <klemscot@klements.com>
	* Change cursor blinking to use g_timeout_add instead of the
	  (deprecated) gtk_timeout_add.

Wed Feb 05, 2003 Scott Klement <klemscot@klements.com>
	* Added key bindings for shift+left, shift+right and shift+home
	  to match the support in cursesterm.
	* Added support for the +/-ruler keyword allowed in cursesterm
	  and/or win32 terminal.

Tue Feb 04, 2003 Scott Klement <klemscot@klements.com>
	* Added color keyword support (to match Windows & Curses terminals)
	* Added mouse selections & copy/paste support

Mon May 22, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Added keyboard mapping for most of keypad, handle of Shift+Tab =
	  backtab.  Shift+Esc = SysReq and Esc is Attention, etc.

Wed May 17, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Added TODO file.  Some work on propogating the config object to
	  all the proper components (specifically the Gtk5250PropDlg).
	* Load font_80 and font_132 from config file.
	* Start configuration propigation (to Gtk5250Terminal and 
	  Gtk5250PropDlg).

Tue May 16, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
	* Fixed some Gtk5250Terminal resizing bugs, it's now possible to use
	  132 column mode (although it doesn resize smaller again when you
	  go back to 80 column mode yet, hmm...)
	* Fixed autogen.sh so that it doesn't try to run autoheader.